Feat: Add onglet

--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -53,8 +53,19 @@
               <a href="{{ path('admin') ~ '/project' }}" class="btn btn-primary btn-custom">
                 CRUD
               </a>
-              <a href="{{ path('admin') ~ '/project/stats' }}" class="btn btn-secondary btn-custom">
-                Stats
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 mb-4">
+        <div class="card shadow-sm border-0 h-100">
+          <div class="card-body text-center">
+            <i class="fa fa-ticket fa-3x mb-3 text-primary"></i>
+            <h5 class="card-title">Tags</h5>
+            <div class="d-flex justify-content-center">
+              <a href="{{ path('admin') ~ '/tag' }}" class="btn btn-primary btn-custom">
+                CRUD
               </a>
             </div>
           </div>
@@ -70,9 +81,6 @@
               <a href="{{ path('admin') ~ '/collaborator' }}" class="btn btn-primary btn-custom">
                 CRUD
               </a>
-              <a href="{{ path('admin') ~ '/collaborator/stats' }}" class="btn btn-secondary btn-custom">
-                Stats
-              </a>
             </div>
           </div>
         </div>
@@ -86,9 +94,6 @@
             <div class="d-flex justify-content-center">
               <a href="{{ path('admin') ~ '/technology?sort[priority]=ASC' }}" class="btn btn-primary btn-custom">
                 CRUD
-              </a>
-              <a href="{{ path('admin') ~ '/technology/stats' }}" class="btn btn-secondary btn-custom">
-                Stats
               </a>
             </div>
           </div>
@@ -104,9 +109,6 @@
               <a href="{{ path('admin') ~ '/society' }}" class="btn btn-primary btn-custom">
                 CRUD
               </a>
-              <a href="{{ path('admin') ~ '/society/stats' }}" class="btn btn-secondary btn-custom">
-                Stats
-              </a>
             </div>
           </div>
         </div>
@@ -120,9 +122,6 @@
             <div class="d-flex justify-content-center">
               <a href="{{ path('admin') ~ '/school' }}" class="btn btn-primary btn-custom">
                 CRUD
-              </a>
-              <a href="{{ path('admin') ~ '/school/stats' }}" class="btn btn-secondary btn-custom">
-                Stats
               </a>
             </div>
           </div>
@@ -138,9 +137,6 @@
               <a href="{{ path('admin') ~ '/trophy' }}" class="btn btn-primary btn-custom">
                 CRUD
               </a>
-              <a href="{{ path('admin') ~ '/trophy/stats' }}" class="btn btn-secondary btn-custom">
-                Stats
-              </a>
             </div>
           </div>
         </div>
@@ -154,26 +150,6 @@
             <div class="d-flex justify-content-center">
               <a href="{{ path('admin') ~ '/trophy-road' }}" class="btn btn-primary btn-custom">
                 CRUD
-              </a>
-              <a href="{{ path('admin') ~ '/trophy/stats' }}" class="btn btn-secondary btn-custom">
-                Stats
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4 mb-4">
-        <div class="card shadow-sm border-0 h-100">
-          <div class="card-body text-center">
-            <i class="fa fa-laptop-code fa-3x mb-3 text-primary"></i>
-            <h5 class="card-title">Utilisation des technologies</h5>
-            <div class="d-flex justify-content-center">
-              <a href="{{ path('admin') ~ '/project-technology' }}" class="btn btn-primary btn-custom">
-                CRUD
-              </a>
-              <a href="{{ path('admin') ~ '/trophy/stats' }}" class="btn btn-secondary btn-custom">
-                Stats
               </a>
             </div>
           </div>
